app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require_self
 *= require foundation_and_overrides
 *= require_tree .
 */
* {
  font-family: 'Rock Salt', cursive; 
}

html p {
  font-family: tahoma;
}


 html header {
    background-color: black;
    color: white;
    text-align: center;
    padding: 10px;
    width: 100%;
    position: fixed;
    top: 0px;
    height: 17%;
 }

 html h1, html h2, html h3  {
  font-family: 'Rock Salt', cursive; 
  margin: 0;
  padding: 0;
  color: white;
 }


#footer {
    background-color: black;
    min-height: auto;
    width: 100%;
    position:fixed;
    height: 15%;
    bottom: 0px;
 }

 footer p {
  font-size: 10px;
  text-align: center;
  margin: 0;
  overflow:visible;
 }

 html button, #tempt-fate {
  background-color: #949470;
  border-radius: 5px;
  border: 2px solid #273519;
  color: black;
}

html button:hover {
  background-color: #4D704D
}

html ul {
  /*margin-right: 25%*/
  margin: 0 auto;
  width: 90%;
}

html li {
  list-style-type: none;
  float: right;
  margin-right: 2%;
}

html a {
  color: black;
}

html a:hover {
  color: white;
}

html span {
  font-family: tahoma;
  font-size: 15px;
}

#battle_box label {
  color: white;
 }
/*
HOMEPAGE*/

.error {
    background-color: black;
    width: 50%;
    border-radius: 5%;
    border: 2px solid gray;
    opacity: .8;
    color: red;
    margin-left: 25%;
}

.error p, .error h4 {
    color: red;
}

#login_signup {
  background-image: url("Zombie_1.jpg");
  background-repeat: no-repeat;
  background-size: 100%;
  height: 100%;
  text-align: center;
  padding-top: 20%;
  padding-bottom: 20%;
}

.back_link a {
    color: gray;
}

.back_link a:hover {
    color: black;
}

#title {
  color: white;
}

#sign_up, #log_in {
  opacity: .8;
}

#login, #signup {
  margin-top: 15%;
}

/*/Users/*/

#your_points {
  font-family: tahoma;
  font-size: 15px;
}

#feed {
  margin-top: 10%;
  padding-bottom: 10%;
}

#post_container_human {
    border-radius: 5px;
    border: 3px solid #3366CC;
    background-color: #99CCFF;
    width: 80%;
    text-align: center;
    margin-left: 10%;
    margin-top: 2%;
}

#post_container_zombie {
    border-radius: 5px;
    border: 3px solid gray;
    background-color: #70944D;
    width: 80%;
    text-align: center;
    margin-left: 10%;
    margin-top: 2%;
}

.black_overlay{
    display: none;
    position: relative;
    top: 0%;
    left: 0%;
    width: 100%;
    height: 100%;
    background-color: black;
    z-index:1001;
    -moz-opacity: 0.8;
    opacity:.80;
    filter: alpha(opacity=80);
} 
.white_content {
    /*text-align: center;*/
    display: none;
    position: fixed;
    top: 25%;
    left: 25%;
    width: 50%;
    height: 100%;
    padding: 16px;
    background-color: black;
    color: white;
    z-index:1002;
    overflow: auto;
}

#rules_list {
  margin-top: 5%;
}

#handle {
  color: white;
}

#menu {
  display:none;
  margin-left: 25%;
  width: 50%;
  font-family: 'Rock Salt', cursive; 
}

@media only screen and (min-width: 500px) and (max-width: 930px){
  html header {
    height: 90px;
  }

  h3 {
    font-size: 60%;
  }

  #menu {
    font-family: 'Rock Salt', cursive;
    display: block; 
  }

  #feed {
    margin-top: 20%;
    padding-bottom: 27%;
  }

  .white_content {
    /*text-align: center;*/
    display: none;
    position: fixed;
    top: 1%;
    left: 2.5%;
    width: 95%;
    height: 85%;
  }

  #handle {
    text-align: center;
    margin-bottom: 5%;
    font-size: 15px;
  }

  #feed {
    padding-bottom: 27%;
  }
}

@media only screen and (min-width: 200px) and (max-width: 500px){
  html header {
    height: 90px;
  }

  #feed {
    margin-top: 30%;
  }

  ul {
    width: 100%
  }

  li {
    width: 100%;
  }

  html button {
   width: 100%; 
   font-size: 11px;  
  }

  html a {
    width: 100%;
    font-size: 11px;
  }
}

